--- a/code/makefile
+++ b/code/makefile
@@ -1,2 +1,2 @@
 all: main.c
-	g++ -o trabalho main.c -L. -l personagem -l playAPC  -I.
+	g++ -o trabalho main.c preenchimento.c -L. -l personagem -l playAPC  -I.
